correction du fichier index.html

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
         <h2>Activité en Techniques d'intégration multimédia <time>2023</time></time></h2>
         <div class="explications">
             <div class="explications__texte">
-                <p> Lancer les logiciels PhotoShop et DreamWeaver, puis, ouvrir le dossier carrousel dans DreamWeaver.
-                    Consulter la documentation et les vidéos.</p>
+                <p> Lancer les logiciels PhotoShop et Bloc-Notes. <br> 
+                    Cliquer le lien "Documentation" pour consulter la documentation dans un autre onglet et les vidéos dans celui-ci.</p>
                 <dl>
                     <dt><a href="documentation.pdf" target="_blank">Documentation</a></dt>
                     <dd>
